# superclip

./: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  ClipboardViewer.css  ClipboardViewer.tsx  Settings.tsx  settings.css  styles.css  types.ts
src-tauri/: Cargo.toml  settings.html  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: command.rs  fns.rs  main.rs  tray.rs
src-tauri/src/backend/: clipboard_monitor.rs  commands.rs  database.rs  mod.rs  shared.rs
src/Components/: AuthComponent.css  AuthComponent.tsx  ClipboardViewer.css  ClipboardViewer.tsx  TextCard.css  TextCard.tsx
