[package]
name = "tauri-macos-menubar-app-example"
version = "0.0.0"
description = "A Tauri App"
authors = ["Victor Aremu <me@victorare.mu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
libsql = { git = "https://github.com/tursodatabase/libsql" }
libsql-client = "0.31.11"
tracing-subscriber = "0.3"
tracing = "0.1.40"
turso = "0.1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
futures = "0.3"
chrono = "0.4"

tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
directories = "5.0"

clipboard = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"
